--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "respect/validation": "^2.4"
     },
     "autoload": {
         "psr-4": {
