--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
-        "respect/validation": "^2.4"
+        "respect/validation": "^2.4",
+        "psr/log": "^3.0"
     },
     "autoload": {
         "psr-4": {
