--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "php": "^8.0",
         "respect/validation": "^2.4",
-        "psr/log": "^3.0"
+        "psr/log": "^3.0",
+        "monolog/monolog": "^3.9"
     },
     "autoload": {
         "psr-4": {
