--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
             "CodeKaizen\\WPPackageMetaProviderLocalTests\\": "tests/"
         }
     },
-    "scripts": {},
+    "scripts": {
+        "test": "phpunit"
+    },
     "require-dev": {
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^11.5"
