--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,10 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": ">=7.4",
+        "codekaizen/wp-package-meta-provider-contract": "dev-main",
         "respect/validation": "^2.4",
-        "psr/log": "^3.0",
-        "codekaizen/wp-package-meta-provider-contract": "dev-main"
+        "psr/log": "^3.0"
     },
     "autoload": {
         "psr-4": {
