--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,15 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.4",
+        "php": "^8.1",
         "codekaizen/wp-package-meta-provider-contract": "dev-main",
-        "respect/validation": "^2.4",
-        "psr/log": "^3.0"
+        "psr/log": "^3.0",
+        "respect/validation": "^2.2"
+    },
+    "config": {
+        "platform": {
+            "php": "8.1.0"
+        }
     },
     "autoload": {
         "psr-4": {
@@ -28,6 +33,6 @@
     },
     "require-dev": {
         "phpstan/phpstan": "^2.1",
-        "phpunit/phpunit": "^11.5"
+        "phpunit/phpunit": "^9.6"
     }
 }
