--- a/.jenkins/deploy/Jenkinsfile
+++ b/.jenkins/deploy/Jenkinsfile
@@ -27,11 +27,11 @@ pipeline {
                     }
                 }
                 stages {
-                    stage('Run Tests and Static Analysis') {
+                    stage('Run Static Analysis and Tests') {
                         steps {
                             sh "composer install"
-                            sh "composer run test"
                             sh "composer run analyze"
+                            sh "composer run test"
                         }
                     }
                 }
