add php formatter settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,6 @@
     // PHP specific settings
     "[php]": {
         "editor.defaultFormatter": "valeryanm.vscode-phpsab",
-        "editor.formatOnSave": true // Set to true if you want automatic formatting on save
+        "editor.formatOnSave": true, // Set to true if you want automatic formatting on save
     },
 }
