Run fix and sniff on CI

--- a/.jenkins/deploy/Jenkinsfile
+++ b/.jenkins/deploy/Jenkinsfile
@@ -32,6 +32,7 @@ pipeline {
                             sh "composer install"
                             sh "composer run analyze"
                             sh "composer run test"
+                            sh "composer run sniff"
                         }
                     }
                 }
