--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^9.6",
         "squizlabs/php_codesniffer": "^3.0",
-        "wp-coding-standards/wpcs": "^3.0"
+        "wp-coding-standards/wpcs": "^3.0",
+        "mockery/mockery": "^1.6"
     }
 }
