--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "phpunit/phpunit": "^9.6",
         "squizlabs/php_codesniffer": "^3.0",
         "wp-coding-standards/wpcs": "^3.0",
-        "mockery/mockery": "^1.6"
+        "mockery/mockery": "^1.6",
+        "phpstan/phpstan-mockery": "^2.0"
     }
 }
