--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "codekaizen/wp-package-meta-provider-contract": "dev-main",
         "psr/log": "^3.0",
         "respect/validation": "^2.2",
-        "guzzlehttp/guzzle": "^7.10"
+        "guzzlehttp/guzzle": "^7.10",
+        "codekaizen/wp-package-meta-provider-contract": "^1.0"
     },
     "config": {
         "platform": {
@@ -46,6 +46,6 @@
         "mockery/mockery": "^1.6",
         "phpstan/phpstan-mockery": "^2.0"
     },
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true
 }
