--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,13 @@
         "test": "phpunit",
         "analyze": "phpstan",
         "sniff": "phpcs -ps src/ tests/",
-        "fix": "phpcbf src/ tests/"
+        "fix": "phpcbf src/ tests/",
+        "cover-php": ["@putenv XDEBUG_MODE=coverage", "phpunit --coverage-clover clover.xml"],
+        "cover-php-html": ["@putenv XDEBUG_MODE=coverage", "phpunit --coverage-clover clover.xml --coverage-html coverage-report"],
+        "debug": [
+            "@putenv XDEBUG_SESSION=1",
+            "@composer run --"
+        ]
     },
     "require-dev": {
         "phpstan/phpstan": "^2.1",
